# GOL2.0

./: Archivo.cpp  CMakeLists.txt  Celula.cpp  Celula.h  GOL2.0.sln  GOL2.0.vcxproj  GOL2.0.vcxproj.filters  Gen.cpp  Gen.h  InformacionGenetica.cpp  InformacionGenetica.h  InformacionYCarga.cpp  InformacionYCarga.h  ListaDeGenes.cpp  ListaDeGenes.h  Tablero.cpp  Tablero.h  globales.h  logicaBinaria.cpp  logicaBinaria.h  main.cpp  matematica.h
Tableros/: tablero.txt
src/: Archivo.cpp  Archivo.h  Celula.cpp  Celula.h  Gen.cpp  Gen.h  InformacionGenetica.cpp  InformacionYCarga.cpp  InformacionYCarga.h  ListaDeGenes.cpp  ListaDeGenes.h  Tablero.cpp  Tablero.h  globales.h  logicaBinaria.cpp  logicaBinaria.h  main.cpp  matematica.cpp
